--- a/templates/backend/admin/blog/blog-article-index.html.twig
+++ b/templates/backend/admin/blog/blog-article-index.html.twig
@@ -6,58 +6,63 @@
         <section class="section dashboard">
             {% block main_content %}
                 <div class="row">
-
-                    <!-- Left side columns -->
-
                     <div class="col-lg-12">
                         {% block sideColumns %}
                             <div class="row">
-                                <div class="card">
-                                    <div class="card-body">
-                                        <div class="row">
-                                            <div class="col-md-8">
+                                <div class="card shadow-sm border-0 rounded-4">
+                                    <div class="card-body p-4">
+
+                                        <div class="d-flex justify-content-between align-items-center mb-4">
+                                            <div>
                                                 {% set firstItemNumber = (articles.currentPageNumber - 1) * articles.itemNumberPerPage + 1 %}
                                                 {% set lastItemNumber = firstItemNumber + articles.items|length - 1 %}
-                                                <h5 class="card-title">
-                                                    {{ 'category.list.title'|trans({'%first%': firstItemNumber, '%last%': lastItemNumber, '%total%': articles.totalItemCount}) }}
+                                                <h5 class="card-title mb-0">
+                                                    {{ 'category.list.title'|trans({
+                                                        '%first%': firstItemNumber,
+                                                        '%last%': lastItemNumber,
+                                                        '%total%': articles.totalItemCount
+                                                    }) }}
                                                 </h5>
                                             </div>
 
-                                            <div class="col-md-4 d-flex justify-content-end">
-                                                <h5 class="card-title">
-                                                    <a href="{{ path('app_article_new') }}">
-                                                        <i class="bi bi-patch-plus-fill"></i> {{ 'category.button.create'|trans }}
-                                                    </a>
-                                                </h5>
-                                            </div>
-
+                                            <a href="{{ path('app_article_new') }}" class="btn btn-primary">
+                                                <i class="bi bi-patch-plus-fill me-1"></i> {{ 'category.button.create'|trans }}
+                                            </a>
                                         </div>
 
-                                        <table class="table table-striped">
-                                            <thead>
-                                            <tr>
-                                                <th scope="col">{{ 'table.action'|trans }}</th>
-                                                <th scope="col">{{ 'table.name'|trans }}</th>
-                                            </tr>
-                                            </thead>
-                                            <tbody>
-                                            {% for article in articles %}
+                                        <div class="table-responsive">
+                                            <table class="table table-hover align-middle">
+                                                <thead class="table-light">
                                                 <tr>
-                                                    <td>
-                                                        <a href="">
-                                                            <i class="bi bi-pencil-square"></i>
-                                                        </a>
-                                                        <a href="{{ path('app_article_delete',{'id':article.id}) }}" class="ms-2">
-                                                            <i class="bi bi-trash-fill"></i>
-                                                        </a>
-                                                    </td>
-                                                    <td>{{ article.title }}</td>
+                                                    <th scope="col">{{ 'table.action'|trans }}</th>
+                                                    <th scope="col">Titre</th>
                                                 </tr>
-                                            {% endfor %}
-                                            </tbody>
-                                        </table>
+                                                </thead>
+                                                <tbody>
+                                                {% for article in articles %}
+                                                    <tr>
+                                                        <td>
+                                                            <a href="{{ path('app_article_edit', {'id': article.id}) }}" class="btn btn-sm btn-outline-secondary me-2" title="{{ 'Edit'|trans }}">
+                                                                <i class="bi bi-pencil-square"></i>
+                                                            </a>
+                                                            <a href="{{ path('app_article_delete', {'id': article.id}) }}" class="btn btn-sm btn-outline-danger" title="{{ 'Delete'|trans }}">
+                                                                <i class="bi bi-trash-fill"></i>
+                                                            </a>
+                                                        </td>
+                                                        <td>{{ article.title }}</td>
+                                                    </tr>
+                                                {% else %}
+                                                    <tr>
+                                                        <td colspan="2" class="text-center text-muted">
+                                                            {{ 'table.empty'|trans }}
+                                                        </td>
+                                                    </tr>
+                                                {% endfor %}
+                                                </tbody>
+                                            </table>
+                                        </div>
 
-                                        <div class="pagination">
+                                        <div class="d-flex justify-content-center mt-4">
                                             {{ knp_pagination_render(articles) }}
                                         </div>
 
@@ -66,19 +71,9 @@
                             </div>
                         {% endblock %}
                     </div>
-
-                    <!-- End Left side columns -->
-
-
                 </div>
             {% endblock %}
         </section>
 
-
     </main>
 {% endblock %}
-
-
-
-
-
