--- a/templates/reset_password/check_email.html.twig
+++ b/templates/reset_password/check_email.html.twig
@@ -42,7 +42,7 @@
                                     </small>
 
                                     <div class="row gap-2 mt-4">
-                                        <a href="{{ path('app_login') }}" class="btn text-white w-100 border-0" style="background-color: #1A0B8C;">
+                                        <a href="{{ path('app_login') }}" class="btn text-white w-100 border-0" style="background-color:  var(--primary-color);">
                                             {{ 'reset.password.back_to_login'|trans }}
                                         </a>
                                     </div>
