--- a/templates/bundles/TwigBundle/Exception/error404.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error404.html.twig
@@ -1,1 +1,71 @@
-rr
+<!DOCTYPE html>
+<html lang="{{ app.request.locale }}">
+
+<head>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+    <title>AirTrade</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
+
+    <!-- Favicons -->
+    <link href="{{ asset('assets/img/antalaschool.png') }}" rel="icon">
+    <link href="{{ asset('assets/img/antalaschool.png') }}" rel="antalaschool">
+
+    <!-- Google Fonts -->
+    <link href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+
+    <!-- Vendor CSS Files -->
+    {{ encore_entry_link_tags('vendor') }}
+    {{ encore_entry_link_tags('app') }}
+    {{ encore_entry_link_tags('ckeditor') }}
+
+
+</head>
+
+<body>
+{% set showSidebarIcon = false %}
+{% block header %}
+    {% include 'composant/nav-bar.html.twig' %}
+{% endblock %}
+<main class="mt-3">
+    <div class="container mt-5">
+
+        <section class="pt-4 section error-404 min-vh-100 d-flex flex-column align-items-center justify-content-center">
+            <h1 >404</h1>
+            <h2>{{ 'error.404.message'|trans }}</h2>
+            <a href="{{ path('app_home') }}" class="btn text-white" style="background-color: var(--primary-color)">
+                <i class="bi bi-house-door-fill me-1"></i> {{ 'error.404.back_home'|trans }}
+            </a>
+            <img src="{{ asset('assets/img/logo/slogan.png') }}" class="img-fluid py-3" alt="Page Not Found">
+
+        </section>
+
+    </div>
+</main><!-- End #main -->
+
+<a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+<!-- Vendor JS Files -->
+{% block java_script %}
+    <script src="{{ asset('assets/vendor/jquery/jquery-3.7.1.min.js') }}"></script>
+
+    {{ encore_entry_script_tags('app') }}
+
+    <script src="{{ asset('assets/vendor/bootstrap/js/bootstrap.bundle.min.js') }}"></script>
+    <script src="{{ asset('assets/vendor/simple-datatables/simple-datatables.js') }}"></script>
+    {{ encore_entry_script_tags('quill') }}
+    {{ encore_entry_script_tags('simple_datatables') }}
+    {{ encore_entry_script_tags('tinymce') }}
+    {{ encore_entry_script_tags('main') }}
+
+{% endblock %}
+
+</body>
+
+</html>
+
+
